--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
     "name": "gordonmurrray/cleanImportHeadings",
     "description": "A small class to help clean headings on an imported CSV file to make them more understandable",
     "keywords": ["imports", "csv", "headings"],
+        "require": {
+            "phpunit/phpunit": "5.7.3"
+    },
     "autoload": {
         "psr-4": {
             "gordonmurray\\": "src/"
