--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "gordonmurrray/clean-import-headings",
     "description": "A small class to help clean headings on an imported CSV file to make them more understandable",
     "keywords": ["imports", "csv", "headings"],
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "gordonmurray\\": "src/"
